# vakil-ai

./: README.md
backend/: .env.example  auth.py  config.py  main.py  pyproject.toml
backend/data/: statutes.json
backend/database/: __init__.py  connection.py  schema.sql
backend/pipelines/: brief_generator.py  chunker.py  contradiction_engine.py  embedder.py  ingestion.py  textract_parser.py  xray_analyzer.py
backend/routers/: __init__.py  auth.py  brief.py  cases.py  contradictions.py  documents.py  moot.py  qa.py  search.py  xray.py
backend/services/: __init__.py  cloudinary_client.py  elevenlabs_speech.py  indian_kanoon.py  search.py  translation.py
frontend/: pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/contradictions/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/hearing-brief/: page.tsx
frontend/app/(app)/moot-court/: page.tsx
frontend/app/(app)/xray/: page.tsx  xray-light.css
frontend/components/: AppSidebar.tsx  LandingNav.tsx  MootSessionsSidebar.tsx  Sidebar.tsx  TopNav.tsx  XrayPdfCanvas.tsx
frontend/lib/: api.ts
