[project]
name = "Vakil-AI-backend"
version = "0.1.0"
description = "Vakil-AI-backend services"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "pydantic==2.5.3",
  "pydantic-settings==2.1.0",
  "python-jose[cryptography]==3.3.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
  "requests==2.31.0",
  "asyncpg==0.29.0",
  "boto3==1.34.14",
  "cloudinary==1.41.0",
]