[project]
name = "legalai-backend"
version = "0.1.0"
description = "LegalAI India backend service"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.64.0",
    "asyncpg==0.29.0",
    "boto3==1.34.14",
    "cloudinary==1.39.1",
    "cohere==5.5.4",
    "email-validator==2.2.0",
    "fastapi==0.109.0",
    "groq==0.5.0",
    "httpx==0.27.2",
    "langdetect==1.0.9",
    "openai==1.14.0",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.2.5",
    "pypdf==5.4.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]

[tool.uv]
package = false
